--- a/dtm.html
+++ b/dtm.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dtm.css">
-    <title>Document</title>
+    <title>WRC</title>
 </head>
 <body>
-    <nav>
-<a href="index.html"><b><h2>FŐOLDAL</h2></b></a>
-</nav>
+
+    <!-- Gomb DOM-ban előrébb a canvas előtt -->
+    <a href="index.html" class="btn">Főoldal</a>
+
+    <!-- Canvas a háttérhez -->
+    <canvas id="background"></canvas>
+
+    <script src="script.js"></script>
 </body>
 </html>
