--- a/f1.html
+++ b/f1.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="f1.css">
-    <title>F1</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="f1.css">
+<title>f1 Forgóajtó + Canvas</title>
 </head>
 <body>
 
-    <!-- Gomb DOM-ban előrébb a canvas előtt -->
-    <a href="index.html" class="btn">Főoldal</a>
+<!-- Főoldal gomb -->
+<a href="index.html" class="btn">Főoldal</a>
 
-    <!-- Canvas a háttérhez -->
-    <canvas id="background"></canvas>
+<!-- 3D forgó képváltó -->
+<div class="carousel-container">
+    <div class="carousel">
+        <div class="carousel-item"><img src=""></div>
+        <div class="carousel-item"><img src=""></div>
+        <div class="carousel-item"><img src=""></div>
+        <div class="carousel-item"><img src=""></div>
+    </div>
+    <button class="arrow left">&#10094;</button>
+    <button class="arrow right">&#10095;</button>
+</div>
 
-    <script src="script.js"></script>
+<!-- Canvas háttér -->
+<canvas id="background"></canvas>
+
+<script src="script.js"></script>
+<script src="carousel.js"></script>
 </body>
 </html>
