--- a/wrc.html
+++ b/wrc.html
@@ -1,29 +1,32 @@
-HTML:
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgatható Menü</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="wrc.css">
+<title>WRC</title>
 </head>
 <body>
 
-    <div class="container text-center mt-5">
-        <div class="menu-wrapper">
-            <button class="nav-button prev" id="prev">&#8592;</button>
-            <div class="menu">
-                <img src="https://via.placeholder.com/150" class="menu-item" alt="Kép 1">
-                <img src="https://via.placeholder.com/150" class="menu-item" alt="Kép 2">
-                <img src="https://via.placeholder.com/150" class="menu-item" alt="Kép 3">
-                <img src="https://via.placeholder.com/150" class="menu-item" alt="Kép 4">
-            </div>
-            <button class="nav-button next" id="next">&#8594;</button>
-        </div>
-    </div>
+<!-- Főoldal gomb -->
+<a href="index.html" class="btn">Főoldal</a>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+<!-- 3D forgó képváltó -->
+<div class="carousel-container">
+    <div class="carousel">
+        <div class="carousel-item"><img src=""></div>
+        <div class="carousel-item"><img src=""></div>
+        <div class="carousel-item"><img src=""></div>
+        <div class="carousel-item"><img src=""></div>
+    </div>
+    <button class="arrow left">&#10094;</button>
+    <button class="arrow right">&#10095;</button>
+</div>
+
+<!-- Canvas háttér -->
+<canvas id="background"></canvas>
+
+<script src="hatter.js"></script>
+
 </body>
 </html>
