--- a/wec.html
+++ b/wec.html
@@ -26,7 +26,7 @@
 <!-- Canvas háttér -->
 <canvas id="background"></canvas>
 
-<script src="script.js"></script>
-<script src="carousel.js"></script>
+<script src="hatter.js"></script>
+
 </body>
 </html>
