--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-
+<!--Ez a főoldal , amiben a felhasználó 4 versenykategória közül választhat azzal , hogy rákattint az általa választott képre.-->
 
 <canvas id="background"></canvas>
 
@@ -42,3 +42,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
