--- a/wrc.html
+++ b/wrc.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="wrc.css">
-<title>WRC</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="wrc.css">
+  <title>WRC</title>
 </head>
 <body>
 
-<!-- Főoldal gomb -->
-<a href="index.html" class="btn">Főoldal</a>
+  <!-- Főoldal gomb -->
+  <a href="index.html" class="btn">Főoldal</a>
 
-<!-- 3D forgó képváltó -->
-<div class="carousel-container">
+  <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
     <div class="carousel">
-        <div class="carousel-item"><img src=""></div>
-        <div class="carousel-item"><img src=""></div>
-        <div class="carousel-item"><img src=""></div>
-        <div class="carousel-item"><img src=""></div>
+      <div class="carousel-item"><img src="WRC v/C3 left.png" alt=""></div>
+      <div class="carousel-item"><img src="WRC v/Fabia left.png" alt=""></div>
+      <div class="carousel-item"><img src="WRC v/Fiesta left.png" alt=""></div>
+      <div class="carousel-item"><img src="WRC v/Peugeot left.png" alt=""></div>
+      <div class="carousel-item"><img src="WRC v/Polo left.png" alt=""></div>
+      <div class="carousel-item"><img src="WRC v/Puma left.png" alt=""></div>
     </div>
-    <button class="arrow left">&#10094;</button>
-    <button class="arrow right">&#10095;</button>
-</div>
 
-<!-- Canvas háttér -->
-<canvas id="background"></canvas>
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
 
-<script src="hatter.js"></script>
+  <!-- Canvas háttér -->
+  <canvas id="background"></canvas>
 
+  <script src="hatter.js"></script>
 </body>
 </html>
