--- a/wec.html
+++ b/wec.html
@@ -15,15 +15,26 @@
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
-    <div class="carousel">
-        <a href=""></a>
-      <div class="carousel-item"><img src="WEC v/Alpin left.png"></div>
-      <div class="carousel-item"><img src="WEC v/Aston left.png"></div>
-      <div class="carousel-item"><img src="WEC v/Audi left.png"></div>
-      <div class="carousel-item"><img src="WEC v/BMW left.png"></div>
-      <div class="carousel-item"><img src="WEC v/Ferrari left.png"></div>
-      <div class="carousel-item"><img src="WEC v/Mazda left.png"></div>
-    </div>
+      <div class="carousel">
+          <a href="WECw/Alpin.html">
+        <div class="carousel-item"><img src="WEC v/Alpin left.png" alt=""></div>
+          </a>
+          <a href="WECw/Aston.html">
+        <div class="carousel-item"><img src="WEC v/Aston left.png" alt=""></div>
+          </a>
+          <a href="WECw/Audi.html">
+        <div class="carousel-item"><img src="WEC v/Audi left.png" alt=""></div>
+          </a>
+          <a href="WECw/BMW.html">
+        <div class="carousel-item"><img src="WEC v/BMW left.png" alt=""></div>
+          </a>
+          <a href="WECw/Ferrari.html">
+        <div class="carousel-item"><img src="WEC v/Ferrari left1.png" alt=""></div>
+          </a>
+          <a href="WECw/Mazda.html">
+        <div class="carousel-item"><img src="WEC v/Mazda left.png" alt=""></div>
+          </a>
+      </div>
 
     <button class="arrow right" id="next">&#10095;</button>
   </div>
