--- a/f1.html
+++ b/f1.html
@@ -15,14 +15,26 @@
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
-    <div class="carousel">
-      <div class="carousel-item"><img src="WRC v/C3 left.png" alt=""></div>
-      <div class="carousel-item"><img src="WRC v/Fabia left.png" alt=""></div>
-      <div class="carousel-item"><img src="WRC v/Fiesta left.png" alt=""></div>
-      <div class="carousel-item"><img src="WRC v/Peugeot left.png" alt=""></div>
-      <div class="carousel-item"><img src="WRC v/Polo left.png" alt=""></div>
-      <div class="carousel-item"><img src="WRC v/Puma left.png" alt=""></div>
-    </div>
+      <div class="carousel">
+          <a href="Formula 1w/Ferrari.html">
+        <div class="carousel-item"><img src="Formula 1 v/Ferraro 00 left.png" alt=""></div>
+          </a>
+          <a href="Formula 1w/Lotus.html">
+        <div class="carousel-item"><img src="Formula 1 v/Lotus left.png" alt=""></div>
+          </a>
+          <a href="Formula 1w/McLaren.html">
+        <div class="carousel-item"><img src="Formula 1 v/McLaren left.png" alt=""></div>
+          </a>
+          <a href="Formula 1w/Mercedes.html">
+        <div class="carousel-item"><img src="Formula 1 v/Mercedes W11 left.png" alt=""></div>
+          </a>
+          <a href="Formula 1w/RedBull.html">
+        <div class="carousel-item"><img src="Formula 1 v/RedBull Left.png" alt=""></div>
+          </a>
+          <a href="Formula 1w/Renault.html">
+        <div class="carousel-item"><img src="Formula 1 v/Renault left.png" alt=""></div>
+          </a>
+      </div>
 
     <button class="arrow right" id="next">&#10095;</button>
   </div>
