--- a/dtm.html
+++ b/dtm.html
@@ -15,14 +15,26 @@
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
 
-    <div class="carousel">
-      <div class="carousel-item"><img src="DTM v/Bently left.png" ></div>
-      <div class="carousel-item"><img src="DTM v/BMW GTR left.png"></div>
-      <div class="carousel-item"><img src="DTM v/Mamba left.png"></div>
-      <div class="carousel-item"><img src="DTM v/Mercedes 92 left.png"></div>
-      <div class="carousel-item"><img src="DTM v/Rexy bone left.png"></div>
-      <div class="carousel-item"><img src="DTM v/RS5 left.png"></div>
-    </div>
+      <div class="carousel">
+          <a href="DTMw/Audi.html">
+        <div class="carousel-item"><img src="DTM v/RS5 left.png" alt=""></div>
+          </a>
+          <a href="DTMw/Bently.html">
+        <div class="carousel-item"><img src="DTM v/Bently left.png" alt=""></div>
+          </a>
+          <a href="DTMw/Mamba.html">
+        <div class="carousel-item"><img src="DTM v/Mamba left.png" alt=""></div>
+          </a>
+          <a href="DTMw/BMW.html">
+        <div class="carousel-item"><img src="DTM v/BMW GTR left.png" alt=""></div>
+          </a>
+          <a href="DTMw/Mercedes.html">
+        <div class="carousel-item"><img src="DTM v/Mercedes 92 left.png" alt=""></div>
+          </a>
+          <a href="DTMw/Porsche g.html">
+        <div class="carousel-item"><img src="DTM v/Rexy left.png" alt=""></div>
+          </a>
+      </div>
 
     <button class="arrow right" id="next">&#10095;</button>
   </div>
