--- a/WRCw/Citroen.html
+++ b/WRCw/Citroen.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Citroen.css">
-    <title>Citroen</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/Citroen.css">
+  <title>WRC</title>
 </head>
 <body>
-   
+  <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../WRC v/C3 left.png"></div>
+      <div class="carousel-item"><img src="../WRC v/C3 front.png"></div>
+      <div class="carousel-item"><img src="../WRC v/C3 right.png"></div>
+      <div class="carousel-item"><img src="../WRC v/C3 back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
-
 </html>
-
