--- a/WRCw/Ford P.html
+++ b/WRCw/Ford P.html
@@ -7,6 +7,20 @@
     <title>Ford</title>
 </head>
 <body>
-    
+    <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../WRC v/Puma left.png"></div>
+      <div class="carousel-item"><img src="../WRC v/Puma front.png"></div>
+      <div class="carousel-item"><img src="../WRC v/Puma right.png"></div>
+      <div class="carousel-item"><img src="../WRC v/Puma back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
 </html>
