--- a/DTMw/BMW.html
+++ b/DTMw/BMW.html
@@ -7,6 +7,20 @@
     <title>BMW</title>
 </head>
 <body>
-    
+    <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../DTM v/BMW GTR left.png"></div>
+      <div class="carousel-item"><img src="../DTM v/BMW GTR front.png"></div>
+      <div class="carousel-item"><img src="../DTM v/BMW GTR right.png"></div>
+      <div class="carousel-item"><img src="../DTM v/BMW GTR back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
 </html>
