--- a/DTMw/Porsche g.html
+++ b/DTMw/Porsche g.html
@@ -7,6 +7,20 @@
     <title>Porsche</title>
 </head>
 <body>
-    
+    <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../DTM v/Rexy left.png"></div>
+      <div class="carousel-item"><img src="../DTM v/Rexy front.png"></div>
+      <div class="carousel-item"><img src="../DTM v/Rexy right.png"></div>
+      <div class="carousel-item"><img src="../DTM v/Rexy back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
 </html>
