--- a/Formula 1w/Renault.html
+++ b/Formula 1w/Renault.html
@@ -7,6 +7,20 @@
     <title>Renault</title>
 </head>
 <body>
-    
+    <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../Formula 1 v/Renault left.png"></div>
+      <div class="carousel-item"><img src="../Formula 1 v/Renault front.png"></div>
+      <div class="carousel-item"><img src="../Formula 1 v/Renault right.png"></div>
+      <div class="carousel-item"><img src="../Formula 1 v/Renault back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
 </html>
