--- a/WECw/Alpin.html
+++ b/WECw/Alpin.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Alpin.css">
-    <title>Alpine</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/Alpin.css">
+  <title>Alpine</title>
 </head>
 <body>
-    
+    <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../WEC v/Alpin left.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Alpin front.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Alpin right.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Alpin back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
 </html>
