--- a/WECw/Aston.html
+++ b/WECw/Aston.html
@@ -7,6 +7,20 @@
     <title>Aston Martin</title>
 </head>
 <body>
-    
+    <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../WEC v/Aston left.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Aston front.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Aston right.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Aston back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
 </html>
