--- a/WECw/Audi.html
+++ b/WECw/Audi.html
@@ -7,6 +7,20 @@
     <title>Audi</title>
 </head>
 <body>
-    
+    <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../WEC v/Audi left.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Audi front.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Audi right.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Audi back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
 </html>
