--- a/WECw/Ferrari.html
+++ b/WECw/Ferrari.html
@@ -7,6 +7,20 @@
     <title>Ferrari</title>
 </head>
 <body>
-    
+    <!-- 3D forgó képváltó -->
+  <div class="carousel-container">
+    <button class="arrow left" id="prev">&#10094;</button>
+
+    <div class="carousel">
+      <div class="carousel-item"><img src="../WEC v/Ferrari left.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Ferrari front.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Ferrari right.png"></div>
+      <div class="carousel-item"><img src="../WEC v/Ferrari back.png"></div>
+    </div>
+
+    <button class="arrow right" id="next">&#10095;</button>
+  </div>
+
+  <script src="../valtas.js"></script>
 </body>
 </html>
