--- a/dtm.html
+++ b/dtm.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="dtm.css">
+  <link rel="shortcut icon" href="unnamed.png" type="image/x-icon">
   <title>WRC</title>
 </head>
 <body>
