Update Ford P.html with Puma Rally1 details
Added technical specifications and history of the Ford Puma Rally1.

--- a/WRCw/Ford P.html
+++ b/WRCw/Ford P.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Ford P.css">
-    <title>Ford</title>
+    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <title>FORD</title>
 </head>
 <body>
+
+  <h1 class="nev">FORD Puma WRC</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,28 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Ford Puma Rally1 a Ford és az M-Sport közös fejlesztésű raliautója, amelyet a 2022-es szezonban mutattak be a WRC új, hibrid alapú szabályrendszerének megfelelően. Az autó a korábbi Ford Fiesta WRC utódja, és a Ford elkötelezettségét jelzi az elektromos hajtásláncok és a fenntartható motorsport iránt.
+
+Technikai adatok
+- Motor: 1.6 literes Ford EcoBoost turbómotor, közvetlen befecskendezéssel
+- Hibrid rendszer: 100 kW-os elektromotor + 3.9 kWh plug-in akkumulátor
+- Teljesítmény: kb. 386 lóerő + 134 lóerő elektromos rásegítés
+- Hajtás: Összkerékhajtás, mechanikus első és hátsó önzáró differenciálmű
+- Sebességváltó: 5 sebességes félautomata
+- Karosszéria: Tubular spaceframe váz, FIA többpontos bukócsővel
+- Tömeg: 1260 kg (szabály szerint)
+- Fékek: 300–370 mm-es tárcsák, négydugattyús féknyergekkel
+- Gumik: Pirelli (2022–2024), Hankook (2025-től)
+
+Versenytörténet
+A Puma Rally1 2022-ben debütált a Monte-Carlo Rallyn, és azóta is az M-Sport Ford World Rally Team versenygépe. A pilóták között szerepelt Craig Breen, Gus Greensmith, Adrien Fourmaux, Ott Tänak és Grégoire Munster. Az autó több dobogós helyezést és futamgyőzelmet szerzett, különösen Tänak vezetésével.
+
+Érdekességek
+- A Puma Rally1 volt az első Ford, amelyet teljes egészében a Rally1 hibrid szabályrendszer szerint fejlesztettek.
+- A hibrid rendszer lehetővé teszi, hogy az autó zéró emisszióval közlekedjen városi szakaszokon, miközben versenytempóban is extra teljesítményt biztosít.
+- A 2024-es és 2025-ös szezonban új aerodinamikai elemeket kapott, köztük módosított hátsó szárnyat és hatékonyabb diffúzort.
+
+Összegzés
+A Ford Puma Rally1 egy modern, hibrid hajtású raliautó, amely a Ford motorsport innovációját képviseli a WRC-ben. A modell technikai fejlettsége és látványos megjelenése révén méltó utódja a Fiesta WRC-nek, és fontos szerepet játszik a fenntartható versenyzés jövőjében. -->
