--- a/WRCw/Ford.html
+++ b/WRCw/Ford.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Ford.css">
-    <title>Ford</title>
+    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <title>FORD</title>
 </head>
 <body>
+
+  <h1 class="nev">FORD Fiesta WRC</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,29 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Ford Fiesta WRC a Ford és az M-Sport közös fejlesztésű versenyautója, amelyet a 2017-es WRC szabályrendszer szerint építettek. Az autó a korábbi Fiesta RS WRC utódja, és a Ford visszatérését jelentette a világbajnoki címekért folytatott küzdelembe. A modell technikailag fejlett, látványos és versenyképes gép volt, amely több futamgyőzelmet és világbajnoki címet is szerzett.
+
+Technikai adatok
+- Motor: 1.6 literes Ford EcoBoost turbómotor, soros négyhengeres, 16 szelepes
+- Teljesítmény: kb. 380 lóerő
+- Nyomaték: 450 Nm
+- Sebességváltó: 6 sebességes szekvenciális, kormány mögötti váltófülekkel
+- Hajtás: Összkerékhajtás, aktív középső differenciálművel
+- Karosszéria: Acél alapú, kompozit elemekkel megerősített, bukócsővel
+- Tömeg: 1190 kg (versenyzők nélkül), 1350 kg versenyzőkkel együtt
+- Fékek: Szellőztetett tárcsák, 370 mm (aszfalt), 300 mm (murva)
+- Gumik: Michelin (2017–2020), Pirelli (2021)
+
+Versenytörténet
+A Fiesta WRC 2017-ben debütált a Monte-Carlo Rallyn, és rögtön győzelemmel indított. A pilóták között szerepelt Sébastien Ogier, Ott Tänak, Elfyn Evans, Teemu Suninen, Gus Greensmith és Adrien Fourmaux. Az autó 2017-ben egyéni és konstruktőri világbajnoki címet szerzett Ogier és az M-Sport révén.
+
+Érdekességek
+- A Fiesta WRC volt az utolsó nem gyári csapat által fejlesztett autó, amely világbajnoki címet nyert.
+- Az M-Sport 71 példányt épített, ebből 38-at a gyári csapatnak, és több mint 475 futamgyőzelmet szerzett különböző bajnokságokban.
+- A modell 2021-ben búcsúzott a WRC-től, helyét a hibrid hajtású Ford Puma Rally1 vette át.
+
+Összegzés
+A Ford Fiesta WRC egy ikonikus raliautó, amely a modern WRC korszak egyik meghatározó szereplője volt. Technikai fejlettsége, megbízhatósága és versenyképessége révén méltó helyet foglal el a Ford motorsport történetében.
+ -->
