--- a/WRCw/Peugeot.html
+++ b/WRCw/Peugeot.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Peugeot.css">
-    <title>Peugeot</title>
+    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <title>PEUGEOT</title>
 </head>
 <body>
+
+  <h1 class="nev">PEUGEOT 206 WRC</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,36 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Peugeot 206 WRC a francia Peugeot Sport által fejlesztett World Rally Car, amely 1999 és 2003 között versenyzett a FIA World Rally Championship (WRC) csúcskategóriájában. A modell a Peugeot visszatérését jelentette a rali világbajnokság élvonalába, és három konstruktőri, valamint két egyéni világbajnoki címet szerzett, ezzel a korszak egyik legsikeresebb raliautójává vált.
+
+Technikai adatok
+- Motor: 2.0 literes, soros négyhengeres, 16 szelepes turbómotor
+- Teljesítmény: kb. 300 lóerő
+- Nyomaték: ~500 Nm
+- Sebességváltó: 6 sebességes szekvenciális, kormány mögötti váltófülekkel
+- Hajtás: Összkerékhajtás, aktív differenciálművekkel
+- Karosszéria: Szélesített 206-os alap, kompozit elemekkel és bukócsővel
+- Tömeg: kb. 1230 kg
+- Fékek: Szellőztetett tárcsák, 4 dugattyús féknyergek
+- Gumik: Michelin
+
+Versenytörténet
+A 206 WRC 1999-ben debütált a Tour de Corse futamon, és már a következő évben futamgyőzelmeket szerzett. A Peugeot három egymást követő évben (2000, 2001, 2002) megnyerte a konstruktőri világbajnokságot, miközben Marcus Grönholm 2000-ben és 2002-ben az egyéni világbajnoki címet is elhódította. A modell utolsó győzelmét 2003-ban szerezte a Rally Catalunyán.
+
+Pilóták
+- Marcus Grönholm – kétszeres világbajnok a 206 WRC-vel
+- Gilles Panizzi – aszfalt-specialista, több győzelemmel
+- Didier Auriol, Harri Rovanperä, Richard Burns – gyári és vendégpilóták
+
+Érdekességek
+- A Peugeot 206 WRC homologizációjához a Peugeot kénytelen volt egy hosszabbított lökhárítós „206 Grand Tourisme” utcai változatot gyártani, mivel az alapmodell nem érte el a minimális hosszúságot.
+- A 206 WRC különösen erős volt aszfaltos és murvás pályákon, és a kor technikai csúcsát képviselte.
+- A klasszikus kék-ezüst festés, oroszlán motívummal, mára a rali történetének egyik legismertebb dizájnjává vált.
+
+Összegzés
+A Peugeot 206 WRC a 2000-es évek elejének egyik legsikeresebb és legikonikusabb raliautója volt. Technikai fejlettsége, megbízhatósága és versenyképessége révén méltó helyet foglal el a Peugeot motorsport történetében, és máig emlékezetes maradt a rali rajongók számára.
+
+
+ -->
