--- a/WRCw/Volkswagen.html
+++ b/WRCw/Volkswagen.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Volkswagen.css">
-    <title>Volkswagen</title>
+    <link rel="shortcut icon" href="../wp15517337.jpg" type="image/x-icon">
+    <title>VOLKSWAGEN</title>
 </head>
 <body>
+
+  <h1 class="nev">VOLKSWAGEN Polo GTI R WRC</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,40 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Volkswagen Polo R WRC a Volkswagen Motorsport által fejlesztett World Rally Car, amely a Polo utcai modellre épülő, de teljesen versenycélra tervezett konstrukció. Az autó 2013-ban debütált a Monte-Carlo Rallyn, és azonnal győzelmeket aratott. A Polo R WRC a Volkswagen első WRC-projektje volt, és a márka rögtön a sportág élvonalába került.
+
+Technikai adatok
+- Motor: 1.6 literes, soros négyhengeres TSI turbómotor
+- Teljesítmény: 315 lóerő @ 6250 rpm
+- Nyomaték: 425 Nm @ 5000 rpm
+- Sebességváltó: 6 sebességes szekvenciális kézi váltó (Xtrac)
+- Hajtás: Állandó összkerékhajtás, lamellás önzáró első és hátsó differenciálmű
+- Karosszéria: Szélesített Polo alap, bukócsővel és kompozit elemekkel
+- Tömeg: 1200 kg (FIA szabály szerint)
+- Felfüggesztés: McPherson rendszer, ZF állítható lengéscsillapítók
+- Gumik: Michelin
+
+Versenytörténet
+- Debütálás: 2013 Monte-Carlo Rally
+- Futamok száma: 52
+- Győzelmek: 43
+- Dobogós helyezések: 87
+- Világbajnoki címek:
+- Egyéni: Sébastien Ogier – 2013, 2014, 2015, 2016
+- Konstruktőri: Volkswagen Motorsport – 2013–2016
+
+Pilóták
+- Sébastien Ogier – négyszeres világbajnok a Polo R WRC-vel
+- Jari-Matti Latvala – többszörös futamgyőztes
+- Andreas Mikkelsen – stabil dobogós versenyző
+
+Érdekességek
+- A Polo R WRC a Super 2000 szabályrendszer alapján indult fejlesztésnek, de végül teljesen új platformot kapott.
+- Az autó fejlesztése 2011-ben kezdődött, és a Volkswagen Dakar-ralin szerzett tapasztalatait is felhasználták.
+- A Polo R WRC dominanciája miatt a WRC szabályalkotói később módosították a technikai előírásokat, hogy kiegyensúlyozottabb mezőnyt teremtsenek.
+
+Összegzés
+A Volkswagen Polo R WRC a modern rali egyik legsikeresebb és legmeghatározóbb autója volt. Technikai fejlettsége, megbízhatósága és versenyképessége révén méltó helyet foglal el a motorsport történetében, és a Volkswagen Motorsport aranykorát jelképezi.
+ -->
