Update Alpin.html with Alpine A424 details
Added detailed information about the Alpine A424 and its specifications for the 2025 FIA World Endurance Championship season.

--- a/WECw/Alpin.html
+++ b/WECw/Alpin.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/Alpin.css">
-  <title>Alpine</title>
+  <title>ALPINE</title>
 </head>
 <body>
+
+  <h1 class="nev">Alpine A424</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +27,36 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- Az Alpine Elf Endurance Team 2025-ben második szezonját kezdi a FIA World Endurance Championship (WEC) Hypercar kategóriájában. A csapat két Alpine A424 prototípust indít (#35 és #36 rajtszám alatt), amelyek a márka motorsport-hagyományait ötvözik modern technológiával és francia mérnöki precizitással.
+
+Műszaki alapok
+- Kategória: Hypercar (LMDh szabályrendszer)
+- Motor: 3.4 literes V6 turbó (Gibson Technology)
+- Hibrid rendszer: Bosch elektromos egység + Williams Advanced Engineering akkumulátor
+- Sebességváltó: Xtrac szekvenciális
+- Alváz: Oreca LMP2 alapú karbonszálas monocoque
+- Teljesítmény: kb. 670 lóerő (szabályozott)
+- Hajtás: Hátsókerék-meghajtás, hibrid rásegítéssel
+
+Pilótafelállás 2025-ben
+#35 Alpine A424
+- Paul-Loup Chatin
+- Charles Milesi
+- Ferdinand Habsburg
+#36 Alpine A424
+- Mick Schumacher
+- Jules Gounon
+- Frédéric Makowiecki
+Tartalék pilóta: Matthieu Vaxiviere
+
+Eredmények a 2024-es szezonban
+- Fuji: 3. helyezés
+- Austin (Texas): 4. hely
+- Japán: 4. hely
+- Bahrein: 4. hely
+
+Összegzés
+Az Alpine A424 és a hozzá tartozó versenyprogram a francia gyártó komoly elköteleződését jelzi a hosszútávú versenyzés iránt. A csapat technikai fejlődése és pilótafelállása azt mutatja, hogy az Alpine célja nem csupán a részvétel, hanem a győzelem a Hypercar kategóriában. A 2024-es eredmények biztatóak, és a 2025-ös szezonban az Alpine stabil dobogós szereplővé válhat.
+ -->
