--- a/WECw/Aston.html
+++ b/WECw/Aston.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Aston.css">
-    <title>Aston Martin</title>
+    <title>ASTON MARTIN</title>
 </head>
 <body>
+
+  <h1 class="nev">Aston Martin Valkyrie AMR-LMH</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +27,34 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- Az Aston Martin 2025-ben hivatalosan is belép a FIA World Endurance Championship (WEC) Hypercar kategóriájába, a Valkyrie AMR-LMH versenyautóval. A projektet a Heart of Racing csapattal közösen valósítják meg, és az Aston Martin célja, hogy a Formula–1 mellett a hosszútávú versenyzés csúcskategóriájában is meghatározó szereplővé váljon.
+
+Műszaki alapok
+- Kategória: Hypercar (LMH szabályrendszer)
+- Motor: 6.5 literes V12 szívómotor (Cosworth fejlesztés)
+- Teljesítmény: kb. 1000 lóerő (verseny-specifikációban korlátozva)
+- Hibrid rendszer: nincs (LMH szabályok szerint opcionális)
+- Sebességváltó: Xtrac szekvenciális
+- Alváz: Karbonszálas monocoque, teljesen Aston Martin fejlesztés
+- Hajtás: Hátsókerék-meghajtás
+- Aerodinamika: Aktív elemek nélkül, de extrém leszorítóerővel
+
+Pilótafelállás 2025-ben
+#007 Aston Martin Valkyrie
+- Harry Tincknell
+- Tom Gamble
+#009 Aston Martin Valkyrie
+- Marco Sørensen
+- Alex Riberas
+Tartalék és IMSA-pilóták: Ross Gunn, Roman De Angelis
+
+Eredmények a 2025-ös szezonban (eddig)
+- Spa-Francorchamps: első közös versenyhétvége, mindkét autó célba ért
+- Le Mans 24h: felkészülés folyamatban, a csapat célja a top 5-be kerülés
+- IMSA Laguna Seca: #23 Valkyrie 100%-os pontszerző sorozatot tart fenn
+
+Összegzés
+Az Aston Martin Valkyrie AMR-LMH a brit gyártó visszatérését jelenti a hosszútávú versenyzés csúcsára, immár a Hypercar kategóriában. A projekt technikai szempontból egyedi, hiszen a Valkyrie utcai szuperautó alapjaira épül, de teljesen verseny-specifikus fejlesztést kapott. A csapat célja, hogy 2025-ben stabil szereplővé váljon, és a következő években győzelmekért harcoljon a Ferrari, Toyota és Porsche ellen.
+ -->
