Add BMW M Hybrid V8 details and specifications
Added information about the BMW M Hybrid V8, including technical specifications and pilot lineup for the 2025 season.

--- a/WECw/BMW.html
+++ b/WECw/BMW.html
@@ -7,6 +7,9 @@
     <title>BMW</title>
 </head>
 <body>
+
+  <h1 class="nev">BMW M Hybrid V8</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +27,35 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A BMW M Hybrid V8 a német gyártó legújabb generációs Hypercar versenyautója, amely a FIA World Endurance Championship (WEC) 2024-es szezonjában debütált, és 2025-ben teljes gyári programmal folytatja szereplését. A modell az LMDh szabályrendszer szerint készült, és a BMW visszatérését jelenti a Le Mans-i 24 órás verseny csúcskategóriájába.
+
+Műszaki adatok
+- Kategória: Hypercar (LMDh)
+- Motor: 4.0 literes V8 biturbó (BMW P66/3)
+- Hibrid rendszer: Bosch elektromotor + Williams Advanced Engineering akkumulátor
+- Teljesítmény: kb. 670 lóerő (szabályozott)
+- Sebességváltó: Xtrac szekvenciális
+- Alváz: Dallara LMP2 alapú karbonszálas monocoque
+- Hajtás: Hátsókerék-meghajtás, hibrid rásegítéssel
+- Karosszéria: BMW M Motorsport által tervezett aerodinamikai csomag, LED-es világítás, zárt cockpit
+
+Pilótafelállás 2025-ben
+#15 BMW M Hybrid V8
+- Dries Vanthoor
+- Raffaele Marciello
+- Marco Wittmann
+#20 BMW M Hybrid V8
+- Sheldon van der Linde
+- René Rast
+- Robin Frijns
+
+Eredmények a 2025-ös szezonban (eddig)
+- Katar: mindkét autó célba ért, top 10-ben
+- Imola: technikai hiba miatt kiesés a #20-as autóval
+- Spa-Francorchamps: #15 5. helyezés
+
+Összegzés
+A BMW M Hybrid V8 a bajor gyártó visszatérését jelenti a hosszútávú versenyzés élvonalába. A modell technikai fejlettsége, a Dallara alváz és a BMW saját fejlesztésű V8-as motorja révén versenyképes alapot biztosít a gyári csapatnak. A 2025-ös szezonban a BMW célja, hogy stabil dobogós szereplővé váljon, és hosszú távon újra Le Mans-győzelemért harcoljon.
+ -->
