Update Ferrari.html with Ferrari 499P details
Added detailed information about the Ferrari 499P, including specifications, driver lineup, and 2024 season results.

--- a/WECw/Ferrari.html
+++ b/WECw/Ferrari.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Ferrari.css">
-    <title>Ferrari</title>
+    <title>FERRARI</title>
 </head>
 <body>
+
+  <h1 class="nev">Ferrari 499P</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +27,37 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Ferrari 499P a legendás olasz gyártó visszatérését jelenti a hosszútávú versenyzés csúcskategóriájába, a Hypercar osztályba. A modell 2023-ban debütált a FIA World Endurance Championship (WEC) sorozatban, és már az első évben győzelmet aratott a Le Mans-i 24 órás versenyen. A 499P a Ferrari első gyári prototípusa az 1973-as 312PB óta.
+
+Műszaki adatok
+- Kategória: Hypercar (LMH szabályrendszer)
+- Motor: 3.0 literes V6 turbó (Ferrari fejlesztés, 120° hengerszög)
+- Hibrid rendszer: 200 kW-os elektromotor az első tengelyen, szabályozott aktiválással
+- Teljesítmény: kb. 680 lóerő (szabályozott)
+- Sebességváltó: 7 sebességes szekvenciális
+- Alváz: Karbonszálas monocoque, teljesen Ferrari fejlesztés
+- Hajtás: eAWD – hátsókerék-meghajtás belső égésű motorral, elsőkerék-meghajtás elektromosan
+- Karosszéria: aerodinamikailag optimalizált, LED-es világítással, zárt cockpit
+
+Pilótafelállás 2025-ben
+#50 Ferrari 499P
+- Antonio Fuoco
+- Miguel Molina
+- Nicklas Nielsen
+#51 Ferrari 499P
+- Alessandro Pier Guidi
+- James Calado
+- Antonio Giovinazzi
+Tartalék pilóta: Davide Rigon
+
+Eredmények a 2024-es szezonban
+- Le Mans 24h: 2. hely (#50), technikai hiba miatt kiesés (#51)
+- Spa-Francorchamps: győzelem (#51)
+- Imola: dobogó mindkét autóval
+- Fuji: 3. hely (#50)
+
+Összegzés
+A Ferrari 499P a márka technikai újraértelmezése a hosszútávú versenyzés világában. A modell nemcsak a Ferrari mérnöki tudását képviseli, hanem a márka történelmi örökségét is új szintre emeli. A 2023-as Le Mans-győzelem után a 499P továbbra is az egyik legversenyképesebb Hypercar a mezőnyben, és a Ferrari célja, hogy 2025-ben újra a dobogó legfelső fokára álljon.
+ -->
