--- a/WECw/Mazda.html
+++ b/WECw/Mazda.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Mazda.css">
-    <title>Mazda</title>
+    <title>MAZDA</title>
 </head>
 <body>
+
+  <h1 class="nev">Mazda 787B Group C Prototype</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +27,33 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Mazda 787B a japán Mazda gyár által fejlesztett Group C kategóriás hosszútávú versenyautó, amely 1990–1991 között versenyzett nemzetközi szinten. A modell a 767B utódja, és a 787-es alapjaira épülő, továbbfejlesztett változat. A 787B különlegessége, hogy egy négyrotoros Wankel-motor hajtja, amely rendkívül magas fordulatszámon működik, és jellegzetes hangjáról is ismert.
+
+Műszaki adatok
+- Kategória: Group C / IMSA GTP
+- Motor: Mazda R26B – 2.6 literes, 4-rotoros, szívó Wankel-motor
+- Teljesítmény: kb. 700 lóerő @ 9000 rpm
+- Sebességváltó: 5 sebességes manuális (Mazda/Porsche)
+- Hajtás: Hátsókerék-meghajtás
+- Karosszéria: Szénszálas és kevlár kompozit monocoque
+- Felfüggesztés: Elöl és hátul dupla keresztlengőkar, belső rugóstagokkal
+- Tömeg: kb. 830 kg
+- Gumik: Dunlop versenygumik
+
+Versenytörténet
+- Le Mans 24h – 1991: 1. hely (362 kör, ~4923 km)
+- Pilóták: Johnny Herbert, Bertrand Gachot, Volker Weidler
+- Csapat: Mazdaspeed
+- Rajtszám: #55
+- Eredmény: Az első japán győzelem Le Mans-ban, és az egyetlen Wankel-motoros győzelem a verseny történetében
+
+Eredmények és örökség
+- A 787B 1991-es győzelme után a Wankel-motorokat betiltották a Le Mans-i szabályrendszerben, így a Mazda rekordja máig megismételhetetlen.
+- Az autó ikonikus narancs-zöld „Renown” festése a motorsport egyik legismertebb dizájnjává vált.
+- A 787B-t 2011-ben újra pályára vitték Le Mans-ban, demonstrációs körökön, ahol ismét lenyűgözte a közönséget hangjával és megjelenésével.
+
+Összegzés
+A Mazda 787B nemcsak technikai bravúr, hanem kulturális ikon is. A Wankel-motoros győzelem a világ egyik legkeményebb versenyén örökre beírta a Mazda nevét a motorsport történetébe. A 787B a japán mérnöki kreativitás és kitartás szimbóluma, amely máig inspirálja a versenyautó-rajongókat világszerte.
+ -->
