Enhance Ferrari F1-2000 page with details
Added detailed information about the Ferrari F1-2000, including technical specifications, pilot details, and season results.

--- a/Formula 1w/Ferrari.html
+++ b/Formula 1w/Ferrari.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Ferrari.css">
-    <title>Ferrari</title>
+    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <title>FERRARI</title>
 </head>
 <body>
+
+  <h1 class="nev">Ferrari F1-2000</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,32 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A Ferrari F1-2000 a Scuderia Ferrari által fejlesztett Formula–1-es versenyautó, amelyet a 2000-es világbajnoki szezonra építettek. A modell tervezéséért Ross Brawn (technikai igazgató) és Rory Byrne (vezető tervező) felelt, míg az aerodinamikai fejlesztéseket Willem Toet vezette. Az autó a Ferrari hosszú távú technikai fejlődésének eredménye, és kulcsszerepet játszott abban, hogy a csapat újra domináns szereplővé váljon.
+
+Műszaki adatok
+- Motor: Ferrari Tipo 049 – 3.0 literes V10, 90° hengerszög, szívó
+- Teljesítmény: kb. 805 lóerő @ 17 300 rpm
+- Sebességváltó: 7 sebességes szekvenciális, titán házban
+- Hajtás: Hátsókerék-meghajtás
+- Karosszéria: Szénszálas monocoque, integrált bukóstruktúrával
+- Tömeg: 600 kg (FIA minimum)
+- Üzemanyag: Shell
+- Gumik: Bridgestone
+
+Pilóták
+- Michael Schumacher – 9 futamgyőzelem, világbajnok
+- Rubens Barrichello – 1 futamgyőzelem, stabil pontszerző
+
+Eredmények a 2000-es szezonban
+- Győzelmek: 10 (Schumacher: 9, Barrichello: 1)
+- Pole pozíciók: 9
+- Dobogós helyezések: 21
+- Világbajnoki címek:
+- Egyéni: Michael Schumacher
+- Konstruktőri: Ferrari
+
+Összegzés
+A Ferrari F1-2000 a Scuderia Ferrari modern korszakának nyitánya volt. A modell nemcsak technikailag volt kiemelkedő, hanem pszichológiai áttörést is jelentett a csapat számára, amely 1979 óta nem nyert egyéni világbajnoki címet. Schumacher dominanciája és a csapat egysége révén a Ferrari újra a Forma–1 csúcsára került, és ezzel elindult az öt egymást követő világbajnoki cím időszaka.
+ -->
