--- a/Formula 1w/Lotus.html
+++ b/Formula 1w/Lotus.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Lotus.css">
-    <title>Lotus</title>
+    <link rel="shortcut icon" href="f1-logo-8k-xm.jpg" type="image/x-icon">
+    <title>LOTUS</title>
 </head>
 <body>
+
+  <h1 class="nev">Lotus Renault GP R31</h1>
+
     <!-- 3D forgó képváltó -->
   <div class="carousel-container">
     <button class="arrow left" id="prev">&#10094;</button>
@@ -24,3 +28,39 @@
   <script src="../valtas.js"></script>
 </body>
 </html>
+
+
+<!-- A 2011-es Forma–1-es szezon különleges volt a Lotus név szempontjából, mivel két különálló csapat is használta: a brit-francia Lotus Renault GP és a malajziai Team Lotus. Bár mindkét istálló a legendás márkanévhez kötődött, technikailag és jogilag teljesen különálló konstrukciókkal és háttérrel működtek.
+
+Lotus Renault GP – Renault R31
+A Lotus Renault GP a korábbi Renault gyári csapat jogutódja volt, amely a Lotus Cars támogatásával versenyzett. A csapat a Renault R31-es autóval indult, amely radikális kipufogó-elrendezésével kezdetben ígéretesnek tűnt.
+- Motor: Renault RS27 V8
+- Sebességváltó: Renault – 7 sebességes szekvenciális
+- Karosszéria: Szénszálas monocoque, zárt cockpit
+- Gumik: Pirelli
+- Pilóták: Nick Heidfeld, Vitaly Petrov, Bruno Senna
+- Csapatfőnök: Eric Boullier
+
+Team Lotus – Lotus T128
+A Team Lotus a malajziai Tony Fernandes vezetésével működött, és a szezon során technikai fejlődést mutatott a 2010-es évhez képest. Az autó a Lotus T128 volt, amely Renault motorral és Red Bull Technologies váltóval készült.
+- Motor: Renault RS27 V8
+- Sebességváltó: Red Bull Technologies – 7 sebességes szekvenciális
+- Karosszéria: Szénszálas monocoque
+- Gumik: Pirelli
+- Pilóták: Heikki Kovalainen, Jarno Trulli, Karun Chandhok
+- Technikai igazgató: Mike Gascoyne
+
+Eredmények a 2011-es szezonban
+Lotus Renault GP
+- Pontok: 73
+- Legjobb helyezés: 3. hely (Petrov – Ausztrália)
+- Konstruktőri helyezés: 5.
+
+Team Lotus
+- Pontok: 0
+- Legjobb helyezés: 13. hely
+- Konstruktőri helyezés: 10.
+
+Összegzés
+A Lotus név 2011-ben két különböző csapatot takart, eltérő technikai háttérrel és teljesítménnyel. A Lotus Renault GP dobogós helyezésekkel indított, de a szezon közepére visszaesett, míg a Team Lotus pontot ugyan nem szerzett, de stabil technikai fejlődést mutatott. A névhasználat körüli jogi vita 2012-ben oldódott meg: a Team Lotus Caterham néven folytatta, míg a Lotus Renault GP Lotus F1 Teamként versenyzett tovább.
+ -->
